--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,11 @@
 <ul class="main-navigation">
+<!--
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives">Archives</a></li>
+-->
+  <li><a href="{{ root_url }}/">首页</a></li>
+  <li><a href="{{ root_url }}/blog/categories/tech/">技术</a></li>
+  <li><a href="{{ root_url }}/blog/categories/life/">生活</a></li>
+  <li><a href="{{ root_url }}/blog/categories/book/">读书</a></li>
+  <li><a href="{{ root_url }}/about">关于</a></li>
 </ul>
