--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,6 +1,5 @@
-@import "base/utilities";
-@import "base/solarized";
-@import "base/theme";
-@import "base/typography";
+@import "base/color";
+@import "base/font";
 @import "base/layout";
-@import "base/whitelake";
+@import "base/typography";
+@import "base/utilities";
